Fixed: tabs/map z-index collision

--- a/Client/web-ui/src/components/MapView/MapView.module.scss
+++ b/Client/web-ui/src/components/MapView/MapView.module.scss
@@ -23,9 +23,12 @@
 }
 
 .ModalTabs {
-  grid-area: main-content;
-  position: relative;
+  position: fixed;
+  top: 17vh;
+
+  display: grid;
   grid-auto-rows: auto;
+  row-gap: 5vh;
   z-index: 2;
 }
 
