--- a/Client/web-ui/src/components/MapView/Tabs.module.scss
+++ b/Client/web-ui/src/components/MapView/Tabs.module.scss
@@ -12,7 +12,6 @@
   color: $primary-color;
 
   padding: 15px 5px;
-  margin: 3vh 0;
   border-style: none;
 
   min-width: 140px;
